# x-creator

./: .gitignore  README.md  poem.txt  pyproject.toml
src/x_creator/: main.py  main_2.py
src/x_creator/crews/post_outliner/: post_outliner_crew.py
src/x_creator/crews/post_outliner/config/: agents.yaml  tasks.yaml
src/x_creator/crews/post_teaser_writer/: post_teaser_writer_crew.py
src/x_creator/crews/post_teaser_writer/config/: agents.yaml  tasks.yaml
src/x_creator/crews/post_writer/: post_writer_crew.py
src/x_creator/crews/post_writer/config/: agents.yaml  tasks.yaml
src/x_creator/crews/topic_research/: topic_research_crew.py
src/x_creator/crews/topic_research/config/: agents.yaml  tasks.yaml
src/x_creator/crews/trends_validator/: trends_validator_crew.py
src/x_creator/crews/trends_validator/config/: agents.yaml  tasks.yaml
src/x_creator/crews/types/: post_types.py  topic_types.py
src/x_creator/mocks/: topics_proposal_mock.py
src/x_creator/tools/: browser_tool.py
