[project]
name = "x_creator"
version = "0.1.0"
description = "x-creator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0",
    "firecrawl-py>=1.4.0",
]

[project.scripts]
kickoff = "x_creator.main:kickoff"
plot = "x_creator.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
